# ramp-automated-fiat-to-crypto

./: .gitignore  .gitmodules  Cargo.toml  Dockercompose.yaml  README.md
openbankapi/: .env  Cargo.toml  Dockerfile  OnrampEcuador.json  USDTToken.json
openbankapi/src/: contract.rs  error.rs  main.rs  types.rs
remoteattestation/: Dockerfile  index.js  package.json
src/: error.rs  main.rs  types.rs
tokenlogic/: README.md  foundry.toml
tokenlogic/script/: Deploy.s.sol
tokenlogic/src/: OnrampEcuador.sol  USDTToken.sol
tokenlogic/test/: OnrampTee.t.sol
