[package]
name = "onramptee"
version = "0.1.0"
edition = "2024"
author= "protocolwhisper.eth"

[dependencies]
axum = "0.8"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

